2022-07-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (struct pkl_ast_var): New field is_indexed.
	(struct pkl_ast_indexer): Likewise.
	(PKL_AST_VAR_IS_INDEXED): Define.
	(PKL_AST_INDEXER_IS_INDEXED): Likewise.
	* libpoke/pkl-trans.c (pkl_trans1_ps_var): Annotate is_indexed.
	(pkl_trans1_ps_indexer): New handler.
	(pkl_phase_trans1): Register new handler.
	* libpoke/pkl-gen.c (pkl_gen_ps_var): Avoid remapping arrays when
	indexing elements when the array type is complete and can be
	mapped.
	(pkl_gen_pr_indexer): Ditto for array indexers themselves.

2022-07-11  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* pickles/ctf.pk (ctf_get_dict): Raise an assert instead of
	E_inval.

2022-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Add an explicative message
	for union alternative constraint exceptions.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/union-constraint-1.pk: New test.
	* testsuite/poke.pkl/union-constraint-2.pk: Likewise.
	* testsuite/poke.pkl/union-constraint-3.pk: Likewise.
	* testsuite/poke.pkl/union-constraint-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-04-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.h (pvm_assert): Add more parameters.
	(PVM_ASSERT): New macro.
	* libpoke/pvm.c (pvm_assert): Replace `assert` with an implementation.
	(assert.h): Remove #include.
	* libpoke/pvm.jitter (PVM_PRINTI): s/pvm_assert/PVM_ASSERT/.
	(PVM_FORMATI): Likewise.
	(PVM_FORMATU): Likewise.
	(exit): Likewise.
	(call): Likewise.
	(asettb): Likewise.
	(strace): Likewise.

2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-repl.c: Include ctype.h.

2022-04-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* libpoke/pkl-gen.c (pkl_gen_ps_func): Fix E_no_return location in
	lambdas.

2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h: Prototype for pkl_ast_format_loc.
	* libpoke/pkl-ast.c (pkl_ast_format_loc): New function.